# DKVCG

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  buildDocker.sh  runDocker.sh  runDockerGpu.sh
CanonicalStore/: CMakeLists.txt
CanonicalStore/BTree/src/: global.cuh
CanonicalStore/BTree/src/map/: GpuBTree.cuh
CanonicalStore/BTree/src/map/kernels/: map_kernels.cuh  map_warps.cuh
CanonicalStore/BTree/unittests/: btree_map_test.cu
CanonicalStore/CanonicalStoreInterface/include/: BTrees.cuh  Slabs.cuh
CanonicalStore/LSlab/: CMakeLists.txt
Communication/: CMakeLists.txt
Communication/include/: Communication.hh  RemoteCommunication.hh
HotCache/: CMakeLists.txt
HotCache/HotCacheInterface/include/: Cache.hh
HotCache/KVCache/: CMakeLists.txt
HotCache/KVCache/include/: KVCache.hh
KVStore/: CMakeLists.txt
KVStore/include/: KVStoreClient.cuh  KVStoreInternalClient.cuh
Model/: CMakeLists.txt
benchmark/: CMakeLists.txt  selfsimilarWorkload.cu  server.cu  uniformWorkload.cu  zipfianWorkload.cu  zipfianWorkloadNoDelete.cu  zipfianWorkloadRangeNoDelete.cu  zipfianWorkloadSwitch.cu
commonInterfaces/: CMakeLists.txt
docs/: CMakeLists.txt
scripts/: .gitignore  runBtreeConfig.sh  writeSettings.sh
service/: client.cu  server.cu
