project(HotCache)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_ARCHITECTURES OFF)

add_subdirectory(KVCache)
add_subdirectory(HotCacheInterface)

set(DOXYGEN_INPUT_DIR "${DOXYGEN_INPUT_DIR}" PARENT_SCOPE)
set(DOXYGEN_PUBLIC_HEADERS "${DOXYGEN_PUBLIC_HEADERS}" PARENT_SCOPE)
